[package]
name = "remotectl-srv"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = "4.6.1"
env_logger = "0.11.10"
log = "0.4.29"
remotectl-common = { path = "../remotectl-common" }
reqwest = { version = "0.13.2", features = ["json"] }
rusb = "0.9.4"
tokio = { version = "1.52.1", features = ["rt", "rt-multi-thread", "macros"] }
uml = { path = "../uml" }

[lints]
workspace = true
